--- a/Depo/Depo/Presentation/UserStories/Settings/Permissions/PermissionsView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Permissions/PermissionsView.xib
@@ -54,7 +54,7 @@
                                         <constraint firstItem="4eH-pQ-DLc" firstAttribute="leading" secondItem="D8w-cS-76U" secondAttribute="leading" constant="16" id="zME-h0-i1n"/>
                                     </constraints>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvu-j9-fb6" userLabel="DescriptionView">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvu-j9-fb6" userLabel="DescriptionContent">
                                     <rect key="frame" x="0.0" y="73" width="346" height="211"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOm-67-OGW" userLabel="In Progress Label">
@@ -64,8 +64,8 @@
                                             <color key="textColor" name="label"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0l-s5-sKr" userLabel="Description View" customClass="IntrinsicEmptiableTextView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="16" y="8" width="314" height="187"/>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0l-s5-sKr" userLabel="DescriptionView" customClass="IntrinsicEmptiableTextView" customModule="Billo" customModuleProvider="target">
+                                            <rect key="frame" x="16" y="25" width="314" height="170"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -73,7 +73,7 @@
                                     </subviews>
                                     <color key="backgroundColor" name="secondaryBackground"/>
                                     <constraints>
-                                        <constraint firstItem="q0l-s5-sKr" firstAttribute="top" secondItem="Pvu-j9-fb6" secondAttribute="top" constant="8" id="FJJ-LP-1hO"/>
+                                        <constraint firstItem="q0l-s5-sKr" firstAttribute="top" secondItem="YOm-67-OGW" secondAttribute="bottom" constant="8" id="FJJ-LP-1hO"/>
                                         <constraint firstItem="YOm-67-OGW" firstAttribute="top" secondItem="Pvu-j9-fb6" secondAttribute="top" id="Nqv-zL-zeJ"/>
                                         <constraint firstAttribute="trailing" secondItem="q0l-s5-sKr" secondAttribute="trailing" constant="16" id="PK4-39-Wzc"/>
                                         <constraint firstAttribute="trailing" secondItem="YOm-67-OGW" secondAttribute="trailing" constant="16" id="UMI-mk-HZo"/>
