--- a/Depo/Depo/Presentation/UserStories/Settings/Permissions/PermissionsView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Permissions/PermissionsView.xib
@@ -24,7 +24,7 @@
                     <rect key="frame" x="8" y="0.0" width="346" height="300"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-JM-h47">
-                            <rect key="frame" x="0.0" y="0.0" width="346" height="284"/>
+                            <rect key="frame" x="0.0" y="0.0" width="346" height="300"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D8w-cS-76U" userLabel="SwitchContentView">
                                     <rect key="frame" x="0.0" y="0.0" width="346" height="65"/>
@@ -55,31 +55,33 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvu-j9-fb6" userLabel="DescriptionContent">
-                                    <rect key="frame" x="0.0" y="73" width="346" height="211"/>
+                                    <rect key="frame" x="0.0" y="73" width="346" height="227"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOm-67-OGW" userLabel="In Progress Label">
-                                            <rect key="frame" x="16" y="0.0" width="314" height="17"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" name="label"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0l-s5-sKr" userLabel="DescriptionView" customClass="IntrinsicEmptiableTextView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="16" y="25" width="314" height="170"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        </textView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ebv-TZ-iGy">
+                                            <rect key="frame" x="16" y="8" width="314" height="203"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOm-67-OGW" userLabel="In Progress Label">
+                                                    <rect key="frame" x="0.0" y="0.0" width="314" height="17"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" name="label"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0l-s5-sKr" userLabel="DescriptionView" customClass="IntrinsicEmptiableTextView" customModule="Billo" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="25" width="314" height="178"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <color key="backgroundColor" name="secondaryBackground"/>
                                     <constraints>
-                                        <constraint firstItem="q0l-s5-sKr" firstAttribute="top" secondItem="YOm-67-OGW" secondAttribute="bottom" constant="8" id="FJJ-LP-1hO"/>
-                                        <constraint firstItem="YOm-67-OGW" firstAttribute="top" secondItem="Pvu-j9-fb6" secondAttribute="top" id="Nqv-zL-zeJ"/>
-                                        <constraint firstAttribute="trailing" secondItem="q0l-s5-sKr" secondAttribute="trailing" constant="16" id="PK4-39-Wzc"/>
-                                        <constraint firstAttribute="trailing" secondItem="YOm-67-OGW" secondAttribute="trailing" constant="16" id="UMI-mk-HZo"/>
-                                        <constraint firstAttribute="bottom" secondItem="q0l-s5-sKr" secondAttribute="bottom" constant="16" id="W5S-sb-zvO"/>
-                                        <constraint firstItem="q0l-s5-sKr" firstAttribute="leading" secondItem="Pvu-j9-fb6" secondAttribute="leading" constant="16" id="a4o-wr-juz"/>
-                                        <constraint firstItem="YOm-67-OGW" firstAttribute="leading" secondItem="Pvu-j9-fb6" secondAttribute="leading" constant="16" id="ep0-jF-P14"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ebv-TZ-iGy" secondAttribute="bottom" constant="16" id="KTy-MW-9BP"/>
+                                        <constraint firstItem="Ebv-TZ-iGy" firstAttribute="top" secondItem="Pvu-j9-fb6" secondAttribute="top" constant="8" id="cxb-2p-hnl"/>
+                                        <constraint firstItem="Ebv-TZ-iGy" firstAttribute="leading" secondItem="Pvu-j9-fb6" secondAttribute="leading" constant="16" id="fVk-ug-obb"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ebv-TZ-iGy" secondAttribute="trailing" constant="16" id="lij-BG-rtH"/>
                                     </constraints>
                                 </view>
                             </subviews>
@@ -87,7 +89,7 @@
                     </subviews>
                     <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="3sh-JM-h47" secondAttribute="bottom" constant="16" id="E0O-QH-r1o"/>
+                        <constraint firstAttribute="bottom" secondItem="3sh-JM-h47" secondAttribute="bottom" id="E0O-QH-r1o"/>
                         <constraint firstItem="3sh-JM-h47" firstAttribute="top" secondItem="rLk-2Z-9Z9" secondAttribute="top" id="ZJi-sO-gny"/>
                         <constraint firstAttribute="trailing" secondItem="3sh-JM-h47" secondAttribute="trailing" id="d6k-Ge-g2N"/>
                         <constraint firstItem="3sh-JM-h47" firstAttribute="leading" secondItem="rLk-2Z-9Z9" secondAttribute="leading" id="jXq-A8-rnx"/>
