--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/LaunchCampaignCard/LaunchCampaignCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/LaunchCampaignCard/LaunchCampaignCard.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,97 +15,69 @@
             <rect key="frame" x="0.0" y="0.0" width="340" height="579"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u2D-rk-kD8">
-                    <rect key="frame" x="0.0" y="0.0" width="340" height="44"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="841-M9-ENc">
-                            <rect key="frame" x="24" y="11.5" width="258" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_present" translatesAutoresizingMaskIntoConstraints="NO" id="XhQ-gi-UG0">
-                            <rect key="frame" x="292" y="9.5" width="28" height="25"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="28" id="i9V-JR-cQF"/>
-                                <constraint firstAttribute="height" constant="25" id="jID-9h-KVw"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="trailing" secondItem="XhQ-gi-UG0" secondAttribute="trailing" constant="20" id="5hX-6i-uJD"/>
-                        <constraint firstItem="841-M9-ENc" firstAttribute="centerY" secondItem="u2D-rk-kD8" secondAttribute="centerY" id="MEu-3G-TNl"/>
-                        <constraint firstItem="841-M9-ENc" firstAttribute="leading" secondItem="u2D-rk-kD8" secondAttribute="leading" constant="24" id="Vry-wM-NYY"/>
-                        <constraint firstItem="XhQ-gi-UG0" firstAttribute="leading" secondItem="841-M9-ENc" secondAttribute="trailing" constant="10" id="lrs-RK-UpJ"/>
-                        <constraint firstAttribute="height" constant="44" id="o60-Dy-e0g"/>
-                        <constraint firstItem="XhQ-gi-UG0" firstAttribute="centerY" secondItem="u2D-rk-kD8" secondAttribute="centerY" id="qx9-nS-4MA"/>
-                    </constraints>
-                </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P0z-hV-jBX">
-                    <rect key="frame" x="0.0" y="44" width="340" height="340"/>
+                    <rect key="frame" x="0.0" y="0.0" width="340" height="340"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="P0z-hV-jBX" secondAttribute="height" id="JEc-nC-bBx"/>
                     </constraints>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="atA-6a-PCN" userLabel="Line View">
-                    <rect key="frame" x="0.0" y="428.5" width="340" height="1"/>
-                    <color key="backgroundColor" name="itemSeperator"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="L0T-us-6YB"/>
-                    </constraints>
-                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yv4-kZ-w0p">
+                    <rect key="frame" x="14" y="385" width="312" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="841-M9-ENc">
+                    <rect key="frame" x="14" y="348" width="312" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNl-Iv-elD">
-                    <rect key="frame" x="25" y="429.5" width="46" height="44"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="weo-Dl-EaI"/>
-                    </constraints>
+                    <rect key="frame" x="14" y="421.5" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="onActionButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="yqa-Ir-b95"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yv4-kZ-w0p">
-                    <rect key="frame" x="24" y="396" width="292" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchCampaign" translatesAutoresizingMaskIntoConstraints="NO" id="vWm-l6-NKA">
+                    <rect key="frame" x="274" y="313" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="7G7-de-bog"/>
+                        <constraint firstAttribute="height" constant="50" id="UwL-p0-rQA"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Yv4-kZ-w0p" secondAttribute="trailing" constant="24" id="7Ky-j8-Q1E"/>
-                <constraint firstItem="u2D-rk-kD8" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="7rq-OJ-te2"/>
-                <constraint firstItem="u2D-rk-kD8" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ExG-m8-V9e"/>
-                <constraint firstItem="P0z-hV-jBX" firstAttribute="top" secondItem="u2D-rk-kD8" secondAttribute="bottom" id="GDA-ae-SOD"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="u2D-rk-kD8" secondAttribute="trailing" id="JC7-y8-Fh3"/>
+                <constraint firstItem="hNl-Iv-elD" firstAttribute="top" secondItem="Yv4-kZ-w0p" secondAttribute="bottom" constant="16" id="6Xh-qy-iwc"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="841-M9-ENc" secondAttribute="trailing" constant="14" id="6pa-5q-etr"/>
+                <constraint firstItem="hNl-Iv-elD" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="Haw-cF-Up3"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vWm-l6-NKA" secondAttribute="trailing" constant="16" id="LAc-Bn-p7m"/>
+                <constraint firstItem="Yv4-kZ-w0p" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="Ol5-sI-4uQ"/>
                 <constraint firstItem="P0z-hV-jBX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="QMu-Sl-r0a"/>
-                <constraint firstItem="atA-6a-PCN" firstAttribute="top" secondItem="Yv4-kZ-w0p" secondAttribute="bottom" constant="12" id="bXo-NX-rua"/>
-                <constraint firstItem="hNl-Iv-elD" firstAttribute="top" secondItem="atA-6a-PCN" secondAttribute="bottom" id="fas-wI-cFg"/>
-                <constraint firstItem="hNl-Iv-elD" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="25" id="kHS-jo-P7j"/>
-                <constraint firstAttribute="trailing" secondItem="atA-6a-PCN" secondAttribute="trailing" id="lKi-DC-Mul"/>
-                <constraint firstItem="atA-6a-PCN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oJr-Ks-XzV"/>
-                <constraint firstItem="Yv4-kZ-w0p" firstAttribute="top" secondItem="P0z-hV-jBX" secondAttribute="bottom" constant="12" id="qfP-ex-RpU"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Yv4-kZ-w0p" secondAttribute="trailing" constant="14" id="RB4-RK-AMb"/>
+                <constraint firstItem="841-M9-ENc" firstAttribute="top" secondItem="P0z-hV-jBX" secondAttribute="bottom" constant="8" id="ZVM-fe-lAK"/>
+                <constraint firstItem="Yv4-kZ-w0p" firstAttribute="top" secondItem="vWm-l6-NKA" secondAttribute="bottom" constant="22" id="ZcO-vD-vW1"/>
+                <constraint firstItem="Yv4-kZ-w0p" firstAttribute="top" secondItem="841-M9-ENc" secondAttribute="bottom" constant="16" id="bOs-75-Dbb"/>
+                <constraint firstItem="841-M9-ENc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="hnT-km-w1J"/>
+                <constraint firstItem="P0z-hV-jBX" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="mcZ-Qa-gX5"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="P0z-hV-jBX" secondAttribute="trailing" id="tVD-vx-hcP"/>
-                <constraint firstItem="Yv4-kZ-w0p" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="xF8-wf-0Wa"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="actionButton" destination="hNl-Iv-elD" id="ReQ-a8-jsr"/>
+                <outlet property="campaignImageView" destination="vWm-l6-NKA" id="wo3-RY-8Zk"/>
                 <outlet property="imageView" destination="P0z-hV-jBX" id="ozT-7N-byR"/>
                 <outlet property="messageLabel" destination="Yv4-kZ-w0p" id="yWS-8U-o67"/>
                 <outlet property="titleLabel" destination="841-M9-ENc" id="arX-Fl-Lbm"/>
-                <outlet property="titleView" destination="u2D-rk-kD8" id="5JJ-bn-9gE"/>
             </connections>
-            <point key="canvasLocation" x="16" y="44.5"/>
+            <point key="canvasLocation" x="16" y="43.628185907046479"/>
         </view>
     </objects>
     <resources>
-        <image name="im_present" width="28" height="25"/>
-        <namedColor name="itemSeperator">
-            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="launchCampaign" width="50" height="50"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
